# glob-lab

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: brace.rs  glob.rs  lib.rs
tests/: test.rs
