[package]
name = "glob-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
fast-glob = "0.2.0"

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
globset = "0.4.14"
